[package]
name = "crust-parachain-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex = { version = "0.4", default-features = false }
log = "0.4.17"
serde = { version = "1.0.144", optional = true, default-features = false, features = [ "derive" ] }
sha3 = { version = "0.8", default-features = false }

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.2.0", default-features = false, features = [ "derive" ] }

# Polkadot / XCM
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }

[features]
default = [ "std" ]
std = [
	"hex/std",
	"parity-scale-codec/std",
	"serde/std",
	"sha3/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm/std",
]
test = []