[package]
name = 'crust-parachain-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.171", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.19", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
smallvec = "1.11.0"
hex-literal = "0.4.1"

xstorage = { path = "../pallets/xstorage", default-features = false }
# xstorage-client = { path = "../../../xstorage", package = "xstorage-client", default-features = false }
claims = { package = "cstrml-claims", path = "../pallets/claims", default-features = false}
pallet-collator-selection = { path = '../pallets/collator-selection', default-features = false }
# swork = { package = "cstrml-swork", path = "../pallets/swork", default-features = false }
# staking = { package = "cstrml-staking", path = "../pallets/staking", default-features = false }
# benefits = { package = "cstrml-benefits", path = "../pallets/benefits", default-features = false }
bridge = { package = "cstrml-bridge", path = "../pallets/bridge", default-features = false }
bridge-transfer = { package = "cstrml-bridge-transfer", path = "../pallets/bridge-transfer", default-features = false }
crust-parachain-primitives = { path = "../primitives", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }

# Moonbeam's pallet for managing assets
pallet-asset-manager = { path = "../pallets/asset-manager", default-features = false }

# Governance
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

# Cumulus dependencies
cumulus-pallet-aura-ext = { path = "../../cumulus/pallets/aura-ext", default-features = false }
cumulus-pallet-parachain-system = { path = "../../cumulus/pallets/parachain-system", default-features = false }
cumulus-primitives-core = { path = "../../cumulus/primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../cumulus/primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../cumulus/primitives/utility", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../cumulus/pallets/xcmp-queue", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../cumulus/pallets/dmp-queue", default-features = false }
cumulus-pallet-xcm = { path = "../../cumulus/pallets/xcm", default-features = false }
cumulus-ping = { path = "../../cumulus/parachains/pallets/ping", default-features = false }
parachain-info = { path = "../../cumulus/parachains/pallets/parachain-info", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }

orml-xcm = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "2b41f29e749fda52522cb4c7ea0e47f517f6a59d"}
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "2b41f29e749fda52522cb4c7ea0e47f517f6a59d"}
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "2b41f29e749fda52522cb4c7ea0e47f517f6a59d"}
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "2b41f29e749fda52522cb4c7ea0e47f517f6a59d"}

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", optional = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-arithmetic/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-scheduler/std",
	"parachain-info/std",
	"pallet-collective/std",
	"pallet-membership/std",
	"pallet-treasury/std",
	"pallet-identity/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-tips/std",
	"pallet-assets/std",
	"crust-parachain-primitives/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-ping/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xstorage/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-authorship/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	"cumulus-pallet-aura-ext/std",
	"pallet-utility/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"orml-xcm/std",
	"orml-xtokens/std",
	"orml-xcm-support/std",
	"orml-traits/std",
	"pallet-asset-manager/std",
	"claims/std",
	# "xstorage-client/std",
	# "swork/std",
	# "staking/std",
	# "benefits/std",
	"bridge/std",
	"bridge-transfer/std",
	"substrate-wasm-builder"
]
