[package]
name = "cstrml-balances"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { optional = true, version = "1.0.116" }
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.0.0" }
sp-std = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
sp-runtime = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
frame-support = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
frame-system = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }

# crust runtime modules
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a"}
sp-core = { git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a"}
pallet-transaction-payment = { git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a"}
primitives = { package = "cst-primitives", path = "../../primitives", features = ["test"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std"
]
runtime-benchmarks = ["frame-benchmarking"]
