[package]
name = "cstrml-balances"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { optional = true, version = "1.0.116" }
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.0.0" }
sp-std = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-runtime = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
frame-support = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
frame-system = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }

# crust runtime modules
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18"}
sp-core = { git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18"}
pallet-transaction-payment = { git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18"}
primitives = { package = "cst-primitives", path = "../../primitives", features = ["test"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std"
]
runtime-benchmarks = ["frame-benchmarking"]
