[package]
name = 'cstrml-bridge'
version = '1.0.0'
authors = ['crustio']
edition = '2018'
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third-party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
serde = { optional = true, version = "1.0.116" }

# primitives
sp-std = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-runtime = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-io = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-core = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }

# frame dependencies
frame-support = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
frame-system = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }

[dev-dependencies]
balances = { package = "cstrml-balances", path = "../balances" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std"
]
