[package]
name = "cstrml-candy"
version = "0.11.0"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
serde = { version = "1.0.116", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

# substrate frame dependencies
frame-support = { default-features = false, version = "2.0.1" }
frame-system = { default-features = false, version = "2.0.1" }
sp-runtime = { default-features = false, version = "2.0.1" }

[dev-dependencies]
sp-core = "2.0.1"
sp-std = "2.0.1"
sp-io = "2.0.1"
hex = '0.4.2'

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]