[package]
name = "cstrml-candy"
version = "0.10.0"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
serde = { version = "1.0.116", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
hex = '0.4.2'

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]