[package]
name = "cstrml-candy"
version = "0.12.0"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
serde = { optional = true, version = "1.0.116" }
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }

# substrate frame dependencies
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = "3.0.0" }

[dev-dependencies]
sp-core = "3.0.0"
sp-std = "3.0.0"
sp-io = "3.0.0"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]